--- a/css/main.css
+++ b/css/main.css
@@ -10,87 +10,77 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 main {
-  margin: 1rem;
-}
-
-h2 {
-  font-family: Oswald, sans-serif;
-  margin: 0;
-  color: #6f00e7;
-  font-size: 2rem;
-}
-
-h2 + img {
-  max-width: 15em;
-  margin-bottom: 1.5rem;
-  order: -1;
-}
-
-p {
-  text-align: center;
-  font-size: 1.4rem;
-  margin: 0 0 1.5rem;
-  font-weight: lighter;
+  padding: 1rem;
 }
 
 ol {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-}
-
-ol > li {
-  border: 3px solid #987ffa;
-  padding: 1rem;
-  border-radius: 6px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-ol ul {
   margin: 0;
   padding: 0;
-  list-style-type: none;
+}
+
+li {
+  padding: 1rem;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  align-self: stretch;
+  flex-direction: column;
+  justify-content: flex-start;
+  border: 3px solid #987ffa;
+  border-radius: 6px;
 }
 
-ul li {
-  padding: 0 .25em;
+h2 {
+  margin: 0;
+  font-family: Oswald, sans-serif;
+  font-weight: bolder;
+  font-size: 2rem;
+  text-align: center;
+  color: #6f00e7;
+  padding-top: 1.5rem;
 }
 
-ul li:first-child {
+p {
+  margin: 0;
+  color: #000;
+  text-align: center;
+  font-size: 1.4rem;
+  padding-bottom: 1.3rem;
+}
+
+.cart {
+  display: flex;
+  padding: .5em 1.5em .7em;
   margin-right: auto;
+  font-family: Oswald, sans-serif;
+  font-weight: bold;
+  font-size: 1rem;
+  background-color: #6f00e7;
+  border-color: #6f00e7;
+  color: #fff;
+  border: none;
+  border-radius: 3em;
+  text-decoration: none;
 }
 
-ul a {
+.fav, .share {
+  background-color: #fff;
+  border-color: #fff;
+  border: none;
+  text-align: right;
   display: flex;
-  justify-content: start;
-  align-items: center;
-}
-
-ul a img {
-  margin-right: .25em;
 }
 
 .content {
-  border-radius: 3em;
-  background-color: #6f00e7;
-  color: #fff;
-  text-decoration: none;
-  font-family: Oswald, sans-serif;
-  padding: .5em 1.5em .7em;
-  font-weight: bold;
+  width: 71%;
+  margin: auto;
+}
+
+span {
+  display: flex;
+  align-items: center;
 }
